--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,8 @@
+<hr>
 <nav class="nav-primary" role="navigation" >
-    <ul>
-        {% for p in site.pages %}
+  {% assign pages = site.pages | sort:"title" %}
+  <ul>
+        {% for p in pages %}
         <li>
         	<a {% if p.url == page.url %}class="active"{% endif %} href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a>
         </li>
