has navigation menu and table of contents for each page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>{{ page.title }}</title>
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/toc.css" >
 
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ "/css/toc.css"  | prepend: site.baseurl }}">
+    <!-- This css contains the default style for TOC -->
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}/css/toc.css">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
 
-    </head>
-    <body>
+  </head>
+  <body>
       
 
