--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,43 @@
 <hr>
-<nav class="nav-primary" role="navigation" >
-  {% assign pages = site.pages | sort:"title" %}
+
+<p><h1>Quick links</h1></p>
+
+<nav>
   <ul>
-        {% for p in pages %}
-        <li>
-        	<a {% if p.url == page.url %}class="active"{% endif %} href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a>
-        </li>
+    {% for nav in site.data.nav %}
+    {% if nav.subcategories != null %}
+    <li>
+      <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} &#x25BC;</a>
+      <ul>
+        {% for subcategory in nav.subcategories %}
+        <li><a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
         {% endfor %}
-    </ul>
+      </ul>
+    </li>
+    {% elsif nav.title == page.title %}
+    <li class="active">
+      <a href="{{ nav.url }}">{{ nav.title }}</a>
+    </li>
+    {% else %}
+    <li>
+      <a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
+    </li>
+    {% endif %}
+    {% endfor %}
+  </ul>
 </nav>
+
+
+<!-- List all found pages in alphabetical order -->
+
+<!-- <nav class="nav-primary" role="navigation" > -->
+<!--   {% assign pages = site.pages | sort:"title" %} -->
+<!--   <ul> -->
+<!--     {% for p in pages %} -->
+<!--     <li> -->
+<!--       <a {% if p.url == page.url %}class="active"{% endif %} href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a> -->
+<!--     </li> -->
+<!--     {% endfor %} -->
+<!--   </ul> -->
+<!-- </nav> -->
 
