--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 
    <h1>{{ page.title }}</h1>
 
-   {{ content }}
+   {{ content | toc_generate }}
+
    {% include nav.html %}
 
 {% include foot.html %}
