--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,16 +4,20 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" >
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/toc.css" >
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ "/css/toc.css"  | prepend: site.baseurl }}">
-    <!-- This css contains the default style for TOC -->
-    <link rel="stylesheet" type="text/css" media="screen" href="{{ site.baseurl }}/css/toc.css">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}/javascripts/toc.js" ></script>
 
   </head>
   <body>
-      
+    <script type="text/javascript">
+      $(document).ready(function() {
+      $('#toc').toc();
+      });
+    </script>
+
+    <div id="toc"></div>
 
