--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,18 @@
 {% include head.html %}
 
-   <h1>{{ page.title }}</h1>
+<div class="wrapper">
+  <header>
+    {% include nav.html %}
+  </header>
 
-   {{ content }}
+  <!--   <h1>{{ page.title }}</h1> -->
 
-   {% include nav.html %}
+  <section>
+    <div id="toc"></div>
+    {{ content }}
+  </section>
 
-{% include foot.html %}
+  <footer>
+    {% include foot.html %}
+  </footer>
+</div>
