--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -134,7 +134,7 @@ header ul a {
   font-size:11px;
   color:#999;
   display:block;
-  text-align:center;
+  text-align:left;
   padding-top:6px;
   height:40px;
 }
