--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,12 +2,12 @@
 
 <div class="wrapper">
   <header>
+    <h1>Main menu</h1>
     {% include nav.html %}
   </header>
 
-  <!--   <h1>{{ page.title }}</h1> -->
-
   <section>
+    <h1>{{ page.title }}</h1>
     <div id="toc"></div>
     {{ content }}
   </section>
