subcategories to sidebar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,11 +12,11 @@
 
 	<!-- minimal style -->
 	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
-	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/header-nav.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<!-- end minimal style -->
 
-	
+
         <script src="{{ site.baseurl }}/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -33,6 +33,7 @@
         <script src="{{ site.baseurl }}/js/plugins.js"></script>
         <script src="{{ site.baseurl }}/js/main.js"></script>
 	<script src="{{ site.baseurl }}/js/toc.js" ></script>
+	
 	
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
