--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,26 +1,32 @@
-<hr>
-<nav>
-  <ul>
-    {% for nav in site.data.nav %}
-    {% if nav.subcategories != null %}
-    <li>
-      <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} &#x25BC;</a>
-      <ul>
-        {% for subcategory in nav.subcategories %}
-        <li><a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
-        {% endfor %}
+<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+    
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav navbar-right">
+	
+	{% for entry in site.data.nav %}
+	
+	<!-- check to see if the data file has a submenu, and if so display it -->
+	{% if entry.subcategories != null %}
+	<li class="dropdown">
+	  <a href="{{ site.baseurl }}/{{ entry.url }}" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">{{ entry.title }}<i class="fa fa-angle-down"></i></a>
+	  <ul class="dropdown-menu">
+	    {% for subcategory in entry.subcategories %}
+	    <li><a href="{{ site.baseurl }}/{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
+	    {% endfor %}
+	  </ul>
+	  {% else %}
+	  
+	  <!-- display the top level navigation for items that don't have a submenu -->
+	<li>
+	  <a href="{{ site.baseurl }}/{{ entry.href }}">{{ entry.title }}</a>
+	  {% endif %}
+	</li>
+	{% endfor %}
       </ul>
-    </li>
-    {% elsif nav.title == page.title %}
-    <li class="active">
-      <a href="{{ nav.url }}">{{ nav.title }}</a>
-    </li>
-    {% else %}
-    <li>
-      <a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
-    </li>
-    {% endif %}
-    {% endfor %}
-  </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container -->
 </nav>
 
