TD-4507 add Testdroid look and feel to docs

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,3 +1,47 @@
-
-</body>
+        <footer>
+            <div id="footer-wrapper">
+                <div id="top-box">
+                    <p class="footerLinksSet">
+                        <a id="fprivacy" href="http://cloud.testdroid.com/#public/privacy">Privacy Policy</a>
+                        <a id="ftos"     href="http://testdroid.com/tos" target="_blank">Terms of Service</a>
+                        <a id="fdevices" href="http://cloud.testdroid.com/#public/devices">Our Devices</a>
+                        <a id="ffaq"     href="http://help.testdroid.com/customer/portal/articles/1469692-testdroid---frequently-asked-questions" target="_blank">Testdroid FAQ</a>
+                        <a id="fcontact" href="http://cloud.testdroid.com/#public/contact" target="staticPagesFrame">Contact Us</a>
+                        <a id="fbuy"     href="http://cloud.testdroid.com/#public/buy">Buy</a>
+                    </p>
+                </div>
+                <div id="bottom-box">
+                    <div class="float-left">
+                        <p>Copyright &copy; <span id="copyright-year"></span>  Bitbar Technologies Ltd.  All rights reserved.</p>
+                    </div>
+                    <div class="float-right">
+                        <a href="https://www.facebook.com/BitbarTechnologies" target="_blank">
+                            <i class="fa fa-facebook-square"></i>
+                        </a>
+                        <a href="http://www.linkedin.com/company/bitbar" target="_blank">
+                            <i class="fa fa-linkedin-square"></i>
+                        </a>
+                        <a href="https://twitter.com/bitbar" target="_blank">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                        <a href="http://www.youtube.com/BitbarChannel" target="_blank">
+                            <i class="fa fa-youtube"></i>
+                        </a>
+                        <a href="https://plus.google.com/u/0/b/113497875167906810083/113497875167906810083/posts" target="_blank">
+                            <i class="fa fa-google-plus-square"></i>
+                        </a>
+                        <a href="http://testdroid.com/blog" target="_blank">
+                            <i class="fa fa-comments"></i>
+                        </a>
+                        <a href="http://vimeo.com/channels/623497" target="_blank">
+                            <i class="fa fa-vimeo-square"></i>
+                        </a>
+                    </div>
+                </div>
+                <script type="text/javascript">
+                    $(function(){var date = new Date();$("#copyright-year").html(date.getFullYear());});
+                </script>
+            </div>
+        </footer>
+    </body>
 </html>
