--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,17 +9,24 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
+        <link rel='shortcut icon' type='image/x-icon' href='{{ site.baseurl }}/favicon.ico' />
 
 	<!-- minimal style -->
 	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
-	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
+	<!-- commented out, no such file <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<!-- end minimal style -->
-
+        
+        <!-- custom Testdroid stylesheet -->
+        <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/testdroid.css">
+        
+        <!-- Font awesome icons, loaded from MaxCDN. Can be included locally into the project if needed/wanted -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <!-- Font loaded from Google fonts. Can be included locally into the project if needed/wanted -->
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	
         <script src="{{ site.baseurl }}/js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
+    
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -44,10 +51,21 @@
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
 
-    <script type="text/javascript">
-      $(document).ready(function() {
-      $('#toc').toc();
-      });
-    </script>
+        <script type="text/javascript">
+          $(document).ready(function() {
+            $('#toc').toc();
+          });
+        </script>
+    
+    </head>
+    <body>
 
-<!--    <div id="toc"></div> -->
+    <!--    <div id="toc"></div> -->
+        <header>
+            <a href="http://cloud.testdroid.com" class="float-left">
+                <img src="{{ site.baseurl }}/images/brand/cloud_horizontal.png">
+            </a>
+            <a href="http://testdroid.com" class="float-right">
+                <img src="{{ site.baseurl }}/images/brand/testdroid_logo.png">
+            </a>
+        </header>
