--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,25 +1,31 @@
-<hr>
+{% assign current = page.url | downcase | split: '/' %}   
 <nav>
   <ul>
+    
     {% for nav in site.data.nav %}
-    {% if nav.subcategories != null %}
-    <li>
-      <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} &#x25BC;</a>
-      <ul>
-        {% for subcategory in nav.subcategories %}
-        <li><a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
-        {% endfor %}
-      </ul>
-    </li>
-    {% elsif nav.title == page.title %}
-    <li class="active">
-      <a href="{{ nav.url }}">{{ nav.title }}</a>
-    </li>
-    {% else %}
-    <li>
-      <a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
-    </li>
-    {% endif %}
+        
+        {% assign navHref = nav.href | downcase%}
+    
+        {% if nav.subcategories != null %}
+        <li>
+          <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} &#x25BC;</a>
+          <ul>
+            {% for subcategory in nav.subcategories %}
+            <li><a href="{{ site.baseurl }}/{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
+            {% endfor %}
+          </ul>
+        </li>
+        
+        {% elsif nav.title == page.title or navHref == current[1] %}
+        <li class="active">
+          <a href="{{ nav.url }}">{{ nav.title }}</a>
+        </li>
+        
+        {% else %}       
+        <li>
+          <a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
+        </li>
+        {% endif %}
     {% endfor %}
   </ul>
 </nav>
