--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,18 @@
 {% include head.html %}
-
-<div class="wrapper">
-  <header>
-    <h1>Main menu</h1>
-    {% include nav.html %}
-  </header>
-
-  <section>
-    <h1>{{ page.title }}</h1>
-    <div id="toc"></div>
-    {{ content }}
-  </section>
-
-  <footer>
-    {% include foot.html %}
-  </footer>
-</div>
+<section>
+    <div class="wrapper">
+        <h1 class="title">{{ page.title }}</h1>
+        <div class="navigation float-left">
+            {% include nav.html %}
+        </div>
+        
+        <div class="content float-right">
+            
+            {% include breadcrumbs.html %}
+            <div id="toc"></div>
+            {{ content }}
+        </div>
+ 
+    </div>
+</section>
+{% include foot.html %}
