Testdroid docs reformatting. Commit before changing filestructure

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,7 +65,21 @@
             <a href="http://cloud.testdroid.com" class="float-left">
                 <img src="{{ site.baseurl }}/images/brand/cloud_horizontal.png">
             </a>
-            <a href="http://testdroid.com" class="float-right">
-                <img src="{{ site.baseurl }}/images/brand/testdroid_logo.png">
-            </a>
+            <span class="user-tools float-right">
+                <span class="user">
+                    <span class="avatar"></span>
+                </span>
+                <ul class="tools">
+                    <li>
+                        <a href="http://cloud.testdroid.com">Log in</a>
+                    </li>
+                    <li id="ut-api">
+                        <a href="http://docs.testdroid.com" target="_blank">API documentation</a>
+                    </li>
+                    <li id="ut-help">
+                        <a href="http://help.testdroid.com" target="_blank">Help</a>
+                    </li>
+                </ul>
+            </span>
+            <input id="site-search" class="float-right" type="text" placeholder="Search">
         </header>
