--- a/stylesheets/testdroid.scss
+++ b/stylesheets/testdroid.scss
@@ -9,7 +9,7 @@ $default-font-size: 16px;
 $footer-link-font-size: 14px;
 $footer-copyright-font-size: 12px;
 $default-font-family: 'Open Sans', sans-serif, Arial, Helvetica;
-$navigation-width: 200px;
+$navigation-width: 300px;
 $section-padding-top-and-bottom: 20px;
 $section-padding-left-and-right: 40px;
 $navigation-and-content-padding: 10px;
@@ -17,6 +17,18 @@ $wrapper-padding: 20px;
 $navigation-element-height: 34px;
 $breadcrumbs-margin: 10px;
 $body-min-width: 776px;
+$title-padding: 10px;
+$navigation-border-right: 8px;
+$navigation-level-padding: 20px;
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    text-decoration: none;
+}
 
 html, body{
     font-size: $default-font-size;
@@ -24,17 +36,26 @@ html, body{
     color: $default-text-color;
     min-width: $body-min-width;
     
+    /*Test*/
+    height: 100vh;
+    overflow-y: hidden;
+    /*Test*/
+    
     h1, h2, h3, h4, h5, h6{
         margin: 0;
         color: $default-text-color;
     }
     
     a{
-        colort: $link-blue;
+        color: $link-blue;
     }
 }
 
 body{
+    
+    /*Test*/
+    height: 100vh;
+    /*Test*/
     
     padding: 0;
     margin: 0;
@@ -55,10 +76,118 @@ body{
         a{
             margin: 10px 20px 0 20px;
             display: inline-block;
-            max-width: 40%;
+            /*max-width: 40%;*/
         }
         img{
             max-height: 40px;
+        }
+        
+        /*User tools and such*/
+        /*.user-tools{
+            margin-right: 10px;
+            padding: 10px 10px;*/
+            /*color: white;
+            cursor: default; 
+            font-weight: 300;
+            font-size: 16px;
+            */
+       /* }*/
+        span.user-tools {
+            position: relative;
+            float: right;
+            margin-right: 10px;
+            padding: 10px 10px;
+            cursor: default;
+
+            &:hover{
+              .tools {
+                opacity: 1;
+                height: auto;
+                border: 1px solid #448BA0;
+                border-radius: 3px;
+              }
+            }
+
+            & > * {
+              display: inline-block;
+            }
+
+            .user {
+              display: block;
+              z-index: 1010;
+              position: relative;
+              padding-right: 50px;
+              & > span {
+                display: block;
+                height: 20px;
+                line-height: 20px;
+              }
+              .name{
+                opacity: 1;
+                transition: opacity .3s, height 0s linear .3s ;
+                -webkit-transition: opacity .3s, height 0s linear .3s;
+              }
+              .avatar {
+                display: block;
+                position: absolute;
+                top: 0;
+                right: 0;
+                height: 40px;
+                width: 40px;
+                border: 1px solid #448BA0;
+                border-radius: 3px;
+                overflow: hidden;
+                &:empty:after {
+                  display: block;
+                  font-family: 'FontAwesome';
+                  -webkit-font-smoothing: antialiased;
+                  font-style: normal;
+                  font-weight: normal;
+                  font-size: 20px;
+                  text-align: center;
+                  line-height: 40px;
+                  color: #448BA0;
+                  content: "\f007";
+                }
+              }
+            }
+            .tools {
+              padding: 50px 10px 5px 10px;
+              z-index: 1000;
+              position: absolute;
+              top: 5px;
+              right:0;
+              opacity: 0;
+              height: 0;
+              width: 100%;
+              overflow: hidden;
+              background-color: $night;
+              box-shadow: 0 1px 5px #448BA0;
+              min-width: 180px;
+
+              transition: opacity .3s, height 0s linear .3s ;
+              -webkit-transition: opacity .3s, height 0s linear .3s;
+              li {
+                line-height: 30px;
+                list-style: none;
+                a{
+                    margin: 0;
+                    color: white;
+                    &:hover{
+                        color: #4DB3CC;
+                    }
+                }
+              }
+            }
+        }
+        #site-search{
+            width: 200px;
+            line-height: 16px;
+            padding: 3px 5px;
+            margin-top: 20px;
+            background-color: $testdroidcomgrey;
+            border-color: $testdroidcomgrey;
+            color: $searchtext;
         }
     }
     /*                          HEADER  END                                   */
@@ -106,6 +235,12 @@ body{
     
     /*                      CONTENT   START                                   */
     section{
+        
+        /* Test */
+        /*min-height: calc(100vh - #{$header-height} - #{$footer-height} - (#{$section-padding-top-and-bottom} * 2));*/
+        height: calc(100vh - #{$header-height} - #{$footer-height} - (#{$section-padding-top-and-bottom} * 2));
+        /* Test */
+        
         padding: $section-padding-top-and-bottom $section-padding-left-and-right;
         float: none;
         width: calc(100% - (#{$section-padding-left-and-right} * 2));
@@ -113,11 +248,16 @@ body{
         .wrapper{
             display: block;
             /*Should be maybe min-height? consider using vh instead of %*/
-            min-height: calc(100vh - #{$footer-height} - #{$header-height} - (#{$section-padding-top-and-bottom} * 2) - 42px);
+            /*Test*/
+            /*min-height: calc(100vh - #{$footer-height} - #{$header-height} - (#{$section-padding-top-and-bottom} * 2));*/
+            height: calc(100vh - #{$footer-height} - #{$header-height} - (#{$section-padding-top-and-bottom} * 2));
+            /*overflow-y: auto;*/
+            /*Test*/
             margin: 0 auto;
-            padding: $wrapper-padding $wrapper-padding $wrapper-padding 0;
+            /*padding: 0 $wrapper-padding $wrapper-padding 0;
             max-width: 1170px;
-            width: calc(100% - (#{$section-padding-left-and-right} * 2));
+            width: calc(100% - (#{$section-padding-left-and-right} * 2));*/
+            width: 100%;
             background-color: $content-background-color;
             border: 1px solid $content-border-color;
             
@@ -126,8 +266,28 @@ body{
             }
             .navigation{
                 width: $navigation-width;
-                border-right: 1px solid $content-border-color;
+                /*border-right: $navigation-border-right solid $content-border-color;*/
+                background-color: $navigation-background;
+                
+                height: calc(100vh - #{$footer-height} - #{$header-height} - (#{$section-padding-top-and-bottom} * 2));
+                overflow-y: auto;
+                
+                position: relative;
                 /*padding-right: $navigation-and-content-padding;*/
+                
+                .navigation-control{
+                    position: absolute;
+                    right: 0px;
+                    width: 10px;
+                    height: 40px;
+                    top: 50%;
+                    z-index: 1000000;
+                }
+                
+                nav{
+                    border-right: $navigation-border-right solid $content-border-color;
+                    height: 100%;
+                }
                 
                 ul, li{
                     list-style-type: none;
@@ -137,10 +297,10 @@ body{
                 li{  
                     min-height: $navigation-element-height;
                     line-height: $navigation-element-height;
-                    border-left: 3px solid $white;
-                    border-bottom: 1px solid $grey;
+                    /*border-left: 3px solid $white;*/
+                    /*border-bottom: 1px solid $grey;*/
                     padding-left: 2px;
-                    padding-right: $navigation-and-content-padding;
+                    /*padding-right: $navigation-and-content-padding;*/
                     a{
                         color: $default-text-color;
                         display: block;
@@ -148,31 +308,44 @@ body{
                     
                     &:hover{
                         background-color: $silver;
-                        border-left: 3px solid $blue;
+                        /*border-left: 3px solid $blue;*/
                     }
                     
                     &.active{
-                        background-color: $light-grey;
-                        border-left: 3px solid $green;
+                        /*background-color: $light-grey;
+                        border-left: 3px solid $green;*/
                     }
                     
                     &:last-child{
                         border-bottom: none;
                     }
+                    
+                    /* Different levels*/
+                    ul li {
+                        padding-left: $navigation-level-padding;
+                    }
+                    
+                    ul li ul li {
+                        padding-left: calc(#{$navigation-level-padding} * 2);
+                    }
                 }
             }
             .title{
                 border-bottom: 1px solid $content-border-color;
-                padding-bottom: 10px;
+                padding-bottom: $title-padding;
                 text-align: center;
-                margin-left: $wrapper-padding;
+                /*margin-left: $wrapper-padding;*/
             }
             .breadcrumbs{
                 margin: $breadcrumbs-margin 0;
             }
             .content{
-                width: calc(100% - #{$navigation-width} - (#{$navigation-and-content-padding} * 2) - 1px);
-                padding-left: $navigation-and-content-padding;  
+                width: calc(100% - #{$navigation-width} - (#{$navigation-and-content-padding} * 2) - #{$navigation-border-right});
+                /*padding-left: $navigation-and-content-padding;  */
+                padding: $navigation-and-content-padding; 
+                /*Testing*/
+                height: calc(100% - (#{$navigation-and-content-padding} * 2));
+                overflow-y: auto;
             }
             &:after {
               clear: both;
