--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
             <button class="navigation-control">< < <</button>
         </div>
         
-        <div class="content float-right">
+        <div class="content">
             <h1 class="title">{{ page.title }}</h1>
             {% include breadcrumbs.html %}
             <div id="toc"></div>
