Docs layout update, based on design by Teemu

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
 
         {% if nav.subcategories != null %}
         <li class="navigation-closed">
-            <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }}</a><span class="navigation-icon float-right"></span>
+            <span class="navigation-icon float-left"></span><a href="{{ site.url }}{{ nav.url }}">{{ nav.title }}</a>
           <ul>
             {% for subcategory in nav.subcategories %}
             {% if current[1] == subcategory.subhref %}
@@ -24,12 +24,12 @@
 
         {% elsif nav.title == page.title or navHref == current[1] %}
         <li class="active">
-          <a href="{{ nav.url }}">{{ nav.title }}</a>
+          <span class="navigation-icon-placeholder float-left"></span><a href="{{ nav.url }}">{{ nav.title }}</a>
         </li>
 
         {% else %}
         <li>
-          <a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
+          <span class="navigation-icon-placeholder float-left"></span><a href="{{ site.baseurl }}/{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
         </li>
         {% endif %}
     {% endfor %}
