--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,8 @@
 <section>
     <div class="wrapper">
   
-        <div class="navigation float-left">
+        <div id="resizable-navigation" class="navigation float-left">
             {% include nav.html %}
-            <button class="navigation-control">< < <</button>
         </div>
         
         <div class="content">
