--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel='shortcut icon' type='image/x-icon' href='{{ site.baseurl }}/favicon.ico' />
 
-	<!-- minimal style -->
+	<!-- minimal style   TO BE REMOVED AS INTERFERES WITH OUR CUSTOM STYLES -->
 	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
 	<!-- commented out, no such file <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -40,7 +40,10 @@
         <script src="{{ site.baseurl }}/js/main.js"></script>
 	<script src="{{ site.baseurl }}/js/toc.js" ></script>
 	
-	
+        <!-- Resize testing -->
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -63,23 +66,7 @@
     <!--    <div id="toc"></div> -->
         <header>
             <a href="http://cloud.testdroid.com" class="float-left">
-                <img src="{{ site.baseurl }}/images/brand/cloud_horizontal.png">
+                <img src="{{ site.baseurl }}/images/brand/testdroid_logo_small.png">
             </a>
-            <span class="user-tools float-right">
-                <span class="user">
-                    <span class="avatar"></span>
-                </span>
-                <ul class="tools">
-                    <li>
-                        <a href="http://cloud.testdroid.com">Log in</a>
-                    </li>
-                    <li id="ut-api">
-                        <a href="http://docs.testdroid.com" target="_blank">API documentation</a>
-                    </li>
-                    <li id="ut-help">
-                        <a href="http://help.testdroid.com" target="_blank">Help</a>
-                    </li>
-                </ul>
-            </span>
             <input id="site-search" class="float-right" type="text" placeholder="Search">
         </header>
