--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -17,17 +17,10 @@
             max-width: 792px;
             margin: 0 auto;
             padding: 0 70px;
-            #top-box{
-                font-size: $footer-link-font-size;
-                *{
-                    margin: 0 10px;
-
-                }
-                border-bottom: 1px solid $footer-border-color;
-            }
             #bottom-box{
                 font-size: $footer-copyright-font-size;
-                margin-top: 10px;
+                padding-top: 6px;
+                overflow: auto;
                 
                 i{
                     font-size: 24px;
