Docs update. Navigaiton 3 levels, ulrs hyphen

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
         <link rel='shortcut icon' type='image/x-icon' href='{{ site.baseurl }}/favicon.ico' />
 
 	<!-- minimal style   TO BE REMOVED AS INTERFERES WITH OUR CUSTOM STYLES -->
-	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
+	<!--<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">--!
 	<!-- commented out, no such file <link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<!-- end minimal style -->
