--- a/stylesheets/testdroid.scss
+++ b/stylesheets/testdroid.scss
@@ -22,6 +22,7 @@ html, body{
     /*Test*/
     height: 100vh;
     overflow-y: hidden;
+    overflow-x: hidden;
     /*Test*/
     
     h1, h2, h3, h4, h5, h6{
