Started implementing search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,11 @@
             {% include breadcrumbs.html %}
             <div id="toc"></div>
             {{ content }}
+            
+            <!-- Checking what site object knows -->
+            <!-- {{ site.pages }} -->
         </div>
- 
+        
     </div>
 </section>
 {% include foot.html %}
