--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,8 @@
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{ site.baseurl }}/js/vendor/jquery-1.11.3.min.js"><\/script>')</script> 
+        
         <script src="{{ site.baseurl }}/js/plugins.js"></script>
         <script src="{{ site.baseurl }}/js/main.js"></script>
 	<script src="{{ site.baseurl }}/js/toc.js" ></script>
@@ -68,5 +69,9 @@
             <a href="http://cloud.testdroid.com" class="float-left">
                 <img src="{{ site.baseurl }}/images/brand/testdroid_logo_small.png">
             </a>
-            <input id="site-search" class="float-right" type="text" placeholder="Search">
+            <!--<input id="site-search" class="float-right" type="text" placeholder="Search">-->
+            <form class="search">
+                <input type="text" class="search-box" id="search" />
+                <input type="submit" class="search-button" value="Search" />
+            </form>
         </header>
