Fix changing variable naming and file endings

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -14,6 +14,6 @@ $section-background-color: $grey;
 $content-background-color: $white;
 $content-border-color: $light-grey;
 $link-blue: #4DB3CC;
-$testdroidcomgrey: #535353;
-$searchtext: #888888;
+$testdroidcom-grey: #535353;
+$search-text: #888888;
 $navigation-background: #f8f8f8;
