--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -15,8 +15,9 @@
             line-height: 16px;
             padding: 3px 5px;
             margin: 6px 20px 0px 0px;
-            background-color: $testdroidcomgrey;
-            border-color: $testdroidcomgrey;
-            color: $searchtext;
+            background-color: $testdroidcom-grey;
+            border-color: $testdroidcom-grey;
+            color: $search-text;
         }
     }
+    
