--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -160,32 +160,39 @@
             }
             
             /* Search styling */
-            .search-result{
-                list-style: none;
-                padding: 0 20px;
-                /*text-overflow: ellipsis;*/
-                
-                /*Testing*/
-                p{
-                    $lines-to-show: 2;
+            .search-results{  
+                padding: 0px;
+                .search-result{
+                    list-style: none;
+                    padding: 0px 20px;
+                    /*text-overflow: ellipsis;*/
 
-                    /* http://codepen.io/martinwolf/pen/qlFdp */
-                    display: block; /* Fallback for non-webkit */
-                    display: -webkit-box;
-                    /*max-width: 400px;*/
-                    /* max-width: calc(100% - 50px);*/
-                    /*height: $font-size*$line-height*$lines-to-show;*/ /* Fallback for non-webkit */
-                    /* replace by a function like above */
-                    height: 44px;
+                    /*Testing*/
+                    p{
+                        $lines-to-show: 2;
 
-                    /*margin: 0 auto;*/
-                    /*font-size: $font-size;
-                    line-height: $line-height;*/
-                    -webkit-line-clamp: $lines-to-show;
-                    -webkit-box-orient: vertical;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
+                        /* http://codepen.io/martinwolf/pen/qlFdp */
+                        display: block; /* Fallback for non-webkit */
+                        display: -webkit-box;
+                        /*max-width: 400px;*/
+                        /* max-width: calc(100% - 50px);*/
+                        /*height: $font-size*$line-height*$lines-to-show;*/ /* Fallback for non-webkit */
+                        /* replace by a function like above */
+                        height: 44px;
+
+                        /*margin: 0 auto;*/
+                        /*font-size: $font-size;
+                        line-height: $line-height;*/
+                        -webkit-line-clamp: $lines-to-show;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
                 }
+            }
+            /* hide search result count from lunr */
+            .search-results-count{
+                display: none;
             }
         }
     }
