--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,8 +70,9 @@
                 <img src="{{ site.baseurl }}/images/brand/testdroid_logo_small.png">
             </a>
             <!--<input id="site-search" class="float-right" type="text" placeholder="Search">-->
-            <form class="search">
+            <form id="site-search" class="search float-right">
                 <input type="text" class="search-box" id="search" />
-                <input type="submit" class="search-button" value="Search" />
+                <span class="search-icon"></span>
+                <input type="submit" class="search-button" value="" />
             </form>
         </header>
