--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -21,7 +21,7 @@
                 border-color: $testdroidcom-grey;
                 color: $search-text;
             }
-            .search-button{
+            .search-button, .search-icon{
                 position: absolute;
                 display: block;
                 width: 22px;
@@ -34,14 +34,7 @@
                 cursor: pointer;
             }
             .search-icon{
-                position: absolute;
-                display: block;
-                width: 22px;
-                height: 22px;
-                line-height: 24px;
                 text-align: center;
-                top: 2px;
-                right: 2px;
                 background-color: $testdroidcom-grey;
                 color: $search-text;
                 
