Test library to add touch event to jquery UI

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,8 @@
         <!-- Resize testing -->
         <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        <!-- Resize touch fix -->
+        <script src="{{ site.baseurl }}/js/jquery.ui.touch-punch.min.js"></script>
         
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
